--- a/tp_cliente/src/fxmls/SideMenu_4.fxml
+++ b/tp_cliente/src/fxmls/SideMenu_4.fxml
@@ -111,5 +111,21 @@
             <Insets top="3.0" />
          </VBox.margin>
       </JFXButton>
+      <Label text="Insumos" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+         <padding>
+            <Insets bottom="5.0" left="10.0" />
+         </padding>
+         <VBox.margin>
+            <Insets top="10.0" />
+         </VBox.margin>
+      </Label>
+      <JFXButton fx:id="btnVerOrdenes" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Ver ordenes de produccion" textAlignment="RIGHT">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </JFXButton>
    </children>
 </VBox>
