--- a/tp_cliente/src/fxmls/FacturaNueva.fxml
+++ b/tp_cliente/src/fxmls/FacturaNueva.fxml
@@ -43,7 +43,7 @@
                         <Font size="14.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="filtroCuit" labelFloat="true" promptText="ID Pedido" GridPane.rowIndex="2">
+                  <JFXTextField fx:id="filtroIdPedido" labelFloat="true" promptText="ID Pedido" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="50.0" right="30.0" />
                      </GridPane.margin>
@@ -51,7 +51,7 @@
                         <Font size="14.0" />
                      </font>
                   </JFXTextField>
-                  <JFXTextField fx:id="filtroFechaRegistro" labelFloat="true" promptText="Fecha de pedido" GridPane.rowIndex="3">
+                  <JFXTextField fx:id="filtroFechaFactura" labelFloat="true" promptText="Fecha def factura" GridPane.rowIndex="3">
                      <GridPane.margin>
                         <Insets left="50.0" right="30.0" />
                      </GridPane.margin>
@@ -65,7 +65,7 @@
       </FlowPane>
       <Pane layoutX="29.0" layoutY="34.0" prefHeight="47.0" prefWidth="618.0" style="-fx-border-radius: 10 0 0 0; -fx-background-radius: 10 0 0 0; -fx-background-color: #355c7D;">
          <children>
-            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="PEDIDOS PARA FACTURAR" textFill="WHITE">
+            <Label alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="618.0" text="VER FACTURAS" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="20.0" />
                </font>
@@ -111,17 +111,17 @@
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtRazonSocial" prefHeight="21.0" prefWidth="166.0" text="RSoc" GridPane.columnIndex="1">
+                  <Label fx:id="txtRazonSocial" prefHeight="21.0" prefWidth="166.0" text="--" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtCuit" prefHeight="21.0" prefWidth="166.0" text="CUIT" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <Label fx:id="txtCuit" prefHeight="21.0" prefWidth="166.0" text="--" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtTel" prefHeight="21.0" prefWidth="166.0" text="Tel" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                  <Label fx:id="txtTel" prefHeight="21.0" prefWidth="166.0" text="--" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
@@ -137,24 +137,22 @@
                   </Label>
                </children>
             </Pane>
-            <Label fx:id="txtIdCliente" layoutX="37.0" layoutY="62.0" prefHeight="94.0" prefWidth="271.0" text="ID1234" underline="true">
+            <Label fx:id="txtIdCliente" layoutX="37.0" layoutY="62.0" prefHeight="94.0" prefWidth="271.0" text="ID--" underline="true">
                <font>
                   <Font size="65.0" />
                </font>
             </Label>
-            <Label alignment="BOTTOM_CENTER" layoutX="37.0" layoutY="166.0" prefHeight="30.0" prefWidth="133.0" text="Datos financieros:">
+            <Label alignment="BOTTOM_CENTER" layoutX="37.0" layoutY="166.0" prefHeight="30.0" prefWidth="217.0" text="Datos financieros - Balance: $">
                <font>
                   <Font name="System Bold" size="15.0" />
                </font>
             </Label>
             <GridPane layoutX="39.0" layoutY="196.0" prefHeight="44.0" prefWidth="624.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="123.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="117.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="104.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="124.0" minWidth="10.0" prefWidth="104.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="73.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="140.0" minWidth="10.0" prefWidth="102.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="121.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="282.0" minWidth="10.0" prefWidth="196.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="230.0" minWidth="10.0" prefWidth="116.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="189.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -170,35 +168,30 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="21.0" prefWidth="166.0" text="Balance:" GridPane.columnIndex="4">
+                  <Label fx:id="txtLimitecred" prefHeight="21.0" prefWidth="50.0" text="--" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtLimiteCred" prefHeight="21.0" prefWidth="50.0" text="RSoc" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="txtFechaPago" prefHeight="21.0" prefWidth="50.0" text="RSoc" GridPane.columnIndex="3">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="txtBalance" prefHeight="21.0" prefWidth="50.0" text="RSoc" GridPane.columnIndex="5">
+                  <Label fx:id="txtFechaPago" prefHeight="21.0" prefWidth="50.0" text="--" GridPane.columnIndex="3">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                </children>
             </GridPane>
+            <Label fx:id="txtBalance" layoutX="256.0" layoutY="173.0" prefHeight="21.0" prefWidth="50.0" text="--">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
       <Pane layoutX="656.0" layoutY="297.0" prefHeight="336.0" prefWidth="681.0" style="-fx-background-color: #e1e5ed; -fx-background-radius: 0 10 0 0;">
          <children>
             <Pane prefHeight="44.0" prefWidth="681.0" style="-fx-background-color: #355c7D;">
                <children>
-                  <Label fx:id="lblPedido" alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="681.0" text="DETALLE DE PEDIDO A FACTURAR" textFill="WHITE">
+                  <Label fx:id="lblPedido" alignment="CENTER" layoutY="9.0" prefHeight="30.0" prefWidth="681.0" text="DETALLE DE PEDIDO" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
@@ -209,44 +202,69 @@
             <GridPane layoutX="17.0" layoutY="292.0" prefHeight="30.0" prefWidth="409.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="173.0" minWidth="10.0" prefWidth="61.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="99.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="84.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="172.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="72.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="48.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="85.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="70.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="348.0" minWidth="10.0" prefWidth="106.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label prefHeight="21.0" prefWidth="166.0" text="Total:">
+                  <Label prefHeight="21.0" prefWidth="166.0" text="STot:">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtEstado" prefHeight="21.0" prefWidth="109.0" text="100" GridPane.columnIndex="1">
+                  <Label fx:id="txtSubtotal" prefHeight="21.0" prefWidth="63.0" text="--" GridPane.columnIndex="1">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label prefHeight="21.0" prefWidth="166.0" text="Impuestos:" GridPane.columnIndex="2">
+                  <Label prefHeight="21.0" prefWidth="166.0" text="IVA:" GridPane.columnIndex="2">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="txtEstado1" prefHeight="21.0" prefWidth="109.0" text="100" GridPane.columnIndex="3">
+                  <Label fx:id="txtImpuestos" prefHeight="21.0" prefWidth="109.0" text="--" GridPane.columnIndex="3">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="lblTotal" prefHeight="21.0" prefWidth="166.0" text="Total:" GridPane.columnIndex="4">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="txtTotal" prefHeight="21.0" prefWidth="109.0" text="--" GridPane.columnIndex="5">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
                </children>
             </GridPane>
-            <JFXButton fx:id="btnEnviar" layoutX="425.0" layoutY="292.0" prefHeight="31.0" prefWidth="242.0" style="-fx-background-color: #8ac96a;" text="Generar factura" textFill="WHITE">
-               <font>
-                  <Font name="System Bold" size="15.0" />
-               </font>
-               <effect>
-                  <DropShadow blurType="GAUSSIAN" height="18.0" radius="8.5" width="18.0" />
-               </effect>
-            </JFXButton>
+            <GridPane layoutX="426.0" layoutY="292.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="107.0" minWidth="10.0" prefWidth="106.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="94.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Fecha factura:">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="txtFechaFactura" text="--" GridPane.columnIndex="1">
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
          </children>
       </Pane>
    </children>
