--- a/tp_cliente/src/fxmls/SideMenu_5.fxml
+++ b/tp_cliente/src/fxmls/SideMenu_5.fxml
@@ -35,11 +35,19 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Label>
-      <JFXButton fx:id="btnNuevaFactura" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Generar factura nueva" textAlignment="RIGHT">
+      <JFXButton fx:id="btnNuevaFactura" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Ver facturas generadas" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font></JFXButton>
       <JFXButton fx:id="btnPagoCliente" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Registrar pago de cliente" textAlignment="RIGHT">
+         <font>
+            <Font size="14.0" />
+         </font>
+         <VBox.margin>
+            <Insets top="3.0" />
+         </VBox.margin>
+      </JFXButton>
+      <JFXButton fx:id="btnVerPago" alignment="CENTER_RIGHT" buttonType="RAISED" minHeight="28.0" onAction="#changeBody" prefHeight="28.0" prefWidth="250.0" ripplerFill="BLACK" style="-fx-background-color: #c06C84;" text="Ver pagos de cliente" textAlignment="RIGHT">
          <font>
             <Font size="14.0" />
          </font>
